fix broken ui stuff

--- a/app/assets/stylesheets/directory/base.css.scss
+++ b/app/assets/stylesheets/directory/base.css.scss
@@ -855,3 +855,10 @@ form.with-tags {
   font-size: 18px;
   line-height: 16px;
 }
+
+.message-container {
+  position: relative;
+  width: 0;
+  height: 0;
+  left: -10px;
+}
