--- a/app/assets/stylesheets/my-collections.css.scss
+++ b/app/assets/stylesheets/my-collections.css.scss
@@ -9,6 +9,11 @@ ul.collections {
     text-align: center;
     float: left;
     text-overflow:ellipsis;
+
+    .collection-thumb {
+      display: block;
+      font-size: 100px;
+    }
   }
 
   li.add-collection {
